add google search console tag
voila

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Start meta google -->
     <meta name="robots" content="index,follow">
+    <meta name="google-site-verification" content="1j6h2Q7I33tRXM8EB8DhrCzgHmvlkw59_liskhZW6pU"/>
     <!-- End meta google -->
     <!-- Start meta facebook -->
     <!-- End meta facebook -->
