change the facebook tag place
there you go

--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
     <%= htmlWebpackPlugin.options.serviceWorkerLoader %>
     <!-- built files will be auto injected -->
     <div class="fb-quote"></div>
+    <div class="fb-customerchat" page_id="1515670032095765"></div>
   </body>
 </html>
