--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       src="https://www.facebook.com/tr?id=235742233559499&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-52RBJ7" frameborder="0" style="display:none visibility:hidden" height="0" width="0"></iframe></noscript>
   </head>
   <body>
     <script>
