--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Start meta google -->
     <meta name="robots" content="index,follow">
     <meta name="google-site-verification" content="1j6h2Q7I33tRXM8EB8DhrCzgHmvlkw59_liskhZW6pU"/>
+    <meta name="fragment" content="!">
     <!-- End meta google -->
     <!-- Start meta facebook -->
     <!-- End meta facebook -->
