--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="fragment" content="!">
     <!-- End meta google -->
     <!-- Start meta facebook -->
+    <meta property="og:url" content="https://chanvreduquebec.org/">
+    <meta property="og:title" content="Chanvre du Québec">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Obtenez un service qui vous aide à trouver des informations pertinentes sur le chanvre tout en vous connectant aux entreprises québécoises du domaine. Il y a des articles de blogs, des sections d’informations et des profils d’entreprises.">
+    <meta property="og:image" content="https://cq2.imgix.net/img/background-social-media.png">
     <!-- End meta facebook -->
     <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
