adding twitter card meta
voila

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta property="og:description" content="Obtenez un service qui vous aide à trouver des informations pertinentes sur le chanvre tout en vous connectant aux entreprises québécoises du domaine. Il y a des articles de blogs, des sections d’informations et des profils d’entreprises."/>
     <meta property="og:image" content="https://cq2.imgix.net/img/background-social-media.png"/>
 
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Chanvre du Québec">
+    <meta name="twitter:description" content="Obtenez un service qui vous aide à trouver des informations pertinentes sur le chanvre tout en vous connectant aux entreprises québécoises du domaine. Il y a des articles de blogs, des sections d’informations et des profils d’entreprises.">
+    <meta name="twitter:image" content="https://cq2.imgix.net/img/background-social-media.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
